--- a/TuttiTourney/src/index.html
+++ b/TuttiTourney/src/index.html
@@ -1,3 +1,7 @@
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Istok+Web&family=Noto+Sans&display=swap');
+</style>
+
 <!doctype html>
 <html lang="en">
 <head>
